# lso

./: .gitignore  README.md  lso.py  pyproject.toml
tests/: conftest.py  test_lso.py
tests/fixtures/: Makefile  empty.c  mixed.c  simple.c  with_vars.c
